# zha-device-handlers

./: .gitignore  .hound.yml  .isort.cfg  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Contributors.md  README.md  _config.yml  aqara_body_sensor.py  aqara_button.py  aqara_open_close_sensor.py  aqara_temperature_humidity_sensor.py  aqara_vibration_sensor.py  pylintrc  pyproject.toml  quirks_v2.md  requirements_test.txt  requirements_test_all.txt  ruff.toml  setup.cfg  setup.py  tox.ini  xbee.md  xiaomi_common.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  device-support-request.md  device_support_request.yml
.github/workflows/: ci.yml  publish-to-pypi.yml  release-management.yml  stale.yml
centralite/: 3450L.py
docs/: README.md
imagic/: GS1117S.py  __init__.py
quirk_generator/: diagnostics.json  generate_quirk.py  locate_matches.py
quirk_generator/templates/: endpoints_template.txt  imports_template.txt  quirk_template.txt
quirks/: __init__.py
quirks/centralite/: 3130.py  3315S.py  3320.py  3326.py  __init__.py
quirks/keenhome/: sv02612mp13.py
quirks/netvox/: z308e3ed.py
quirks/philips/: rwl021.py
quirks/samjin/: multi.py
quirks/smartthings/: __init__.py  tag_v4.py
quirks/xiaomi/: __init__.py  aqara_body_sensor.py  aqara_button.py  aqara_cube.py  aqara_leak_sensor.py  aqara_open_close_sensor.py  aqara_temperature_humidity_sensor.py  aqara_vibration_sensor.py
script/: check_dirty  check_format  setup
tests/: Untitled-3.py  __init__.py  async_mock.py  common.py  conftest.py  test_adeo.py  test_bosch.py  test_ctrl_neutral1.py  test_danfoss.py  test_develco.py  test_feibit.py  test_gledopto.py  test_ikea.py  test_immax.py  test_inovelli_blue.py  test_kof.py  test_konke.py  test_legrand.py  test_lellki.py  test_linkind.py  test_linxura.py  test_niko.py  test_orvibo.py  test_owon.py  test_paulmann.py  test_philip.py  test_philips.py  test_quirks.py  test_schneider.py  test_schneiderelectric.py  test_sinope.py  test_smarthjemmet.py  test_smartwings.py  test_sonoff.py  test_thirdreality.py  test_tuya.py  test_tuya_air.py  test_tuya_builder.py  test_tuya_clusters.py  test_tuya_cover.py  (+10 more)
xiaomi/aqara/: remote_e1.py
zhaquirks/: __init__.py  const.py  quirk_ids.py  whitelist.py
zhaquirks/adeo/: __init__.py  color_controller.py  sensor_ldsenk08.py
zhaquirks/aduro/: __init__.py  adurolightncc.py
zhaquirks/aurora/: __init__.py  aurora_dimmer.py
zhaquirks/awox/: __init__.py  remote2.py
zhaquirks/bitron/: __init__.py  thermostat.py
zhaquirks/blitzwolf/: __init__.py  bw_is3.py3
zhaquirks/bosch/: __init__.py  isw-zdl1-wp11g.py  isw_zdl1_wp11g.py  motion.py  rbsh_rth0_zb_eu.py  rbsh_trv0_zb_eu.py  thermostat.py  twinguard.py
zhaquirks/centralite/: 3130.py  3157100.py  3300S.py  3300S2.py  3300S_2.py  3305S.py  3305S_2.py  3310S.py  3315S.py  3320.py  3321S.py  3325S.py  3326.py  3450-l.py  3450L.py  3450l.py  3460L.py  __init__.py  cl_3130.py  cl_3157100.py  cl_3300S.py  cl_3305S.py  cl_3310S.py  cl_3321S.py  cl_3460L.py  contact.py  ias.py  motion.py  motionandtemp.py
zhaquirks/ctm/: __init__.py  air_sensor.py  ax_water_sensor.py  mbd.py  mikrofon.py  mkomfy.py  mstikk_outlet.py  mtouch_astro.py  mtouch_bryter.py  mtouch_dim.py  mtouch_one.py
zhaquirks/danfoss/: __init__.py  thermostat.py
zhaquirks/develco/: __init_.py  __init__.py  air_quality.py  heat_alarm.py  motion.py  motion_sensor.py  open_close.py  power_plug.py  smoke_alarm.py
zhaquirks/echostar/: __init__.py  bell.py
zhaquirks/ecolink/: 4655bC0-R.py  __init__.py  contact.py
zhaquirks/edpwithus/: __init__.py  redy_plug.py
zhaquirks/elko/: __init__.py  smart_super_thermostat.py
zhaquirks/eurotronic/: __init__.py  spzb0001.py
zhaquirks/feibit/: __init__.py  fnb56.py  switch.py
zhaquirks/gledopto/: __init__.py  glc007_2id.py  glc009.py  glc009p.py  gls007z.py  glsd001.py  glsd_dimmer.py  soposhgu10.py
zhaquirks/greatstar/: 1116-S.py  __init__.py
zhaquirks/heiman/: __init__.py  smoke.py
zhaquirks/hivehome/: __init__.py  mot003V0.py  mot003V6.py
zhaquirks/hzc/: __init__.py  dimmerswitch.py  doubledimmerswitch.py
zhaquirks/icasa/: __init__.py  iczb_kpd12.py  iczb_kpd14s.py  iczb_kpd18s.py
zhaquirks/ikea/: 5buttonremote.py  __init__.py  blinds.py  cctlightzha.py  dimmer.py  fivebtnremote.py  fivebtnremotezha.py  fourbtnremote.py  motion.py  motionzha.py  opencloseremote.py  plug.py  shortcutbtn.py  somrigsmartbtn.py  starkvind.py  symfonisk.py  symfonisk2.py  tradfrigu10bulb.py  tradfrilight.py  tradfriplug.py  tretaktplug.py  twobtnremote.py  vindstyrka.py
zhaquirks/iluminize/: __init__.py  cct.py  dim.py
zhaquirks/imagic/: 1116s.py  GS1117S.py  __init__.py  gs1117s.py  im1116s.py
zhaquirks/immax/: ts0219_siren.py
zhaquirks/innr/: __init__.py  innr_sp120_plug.py  innr_sp234_plug.py  innr_sp240_plug.py  rb285c.py  rs228t.py
zhaquirks/inovelli/: VZM31-SN.py  VZM31SN.py  VZM35SN.py  VZM36.py  __init__.py  types.py
zhaquirks/insta/: __init__.py  nexentro_pushbutton_interface.py
zhaquirks/keenhome/: __init__.py  sv02612mp13.py  weather.py
zhaquirks/kof/: __init__.py  kof_mr101z.py
zhaquirks/konke/: __init__.py  button.py  magnet.py  motion.py  temp.py
zhaquirks/lds/: __init__.py  cctswitch.py
zhaquirks/ledvance/: __init__.py  a19rgbw.py  flexrgbw.py
zhaquirks/legrand/: __init__.py  cable_outlet.py  dimmer.py  remote_switch.py  switch.py  wire_pilot.py
zhaquirks/lellki/: __init__.py  wp33.py
zhaquirks/lidl/: TS0501A.py  __init__.py  cct.py  rgbcct.py  ts011f_plug.py  ts0601_water_valve.py
zhaquirks/lifecontrol/: __init__.py  vocsensor.py
zhaquirks/linkind/: ZB-DoorSensor-D0003.py  __init__.py  a001082.py  doorsensor_d0003.py  motion.py
zhaquirks/linxura/: Untitled-3.py  Untitled-4.py  __init__.py  button.py
zhaquirks/lixee/: __init__.py  zlinky.py
zhaquirks/lutron/: __init__.py  lzl4bwhl01remote.py
zhaquirks/mli/: __init__.py  tint.py  tintE14rgbcct.py
zhaquirks/netvox/: __init__.py  z308e3ed.py
zhaquirks/niko/: __init__.py  (+1 more)
(+386 files in other folders)
